testsuite/tests/typing-modules-bugs/pr10693_bad.compilers.reference
File "pr10693_bad.ml", line 27, characters 26-27:
27 | module Bad (A : S') : S = A
                               ^
Error: Signature mismatch:
       Modules do not match:
         sig val x : 'a option module M : Dep -> S end
       is not included in
         S
       Try changing module M to be a
       (X : Dep) ->
         sig
           val x : X.t option
           module M : (Y : Dep) -> sig val x : X.t option end
         end
